Reformat of Java code Fixed compile errors Added .classpath, .project and build to gitignore